# KryptoPass-CLI

./: .gitignore  .tmp  CHANGES.MD  Cargo.toml  README.md  Rules.toml  SECURITY.md  config.toml  example-rules.toml
docs/: imlp.md  password.md
docs/generator/: PASSWORDS.md
src/: lib.rs  main.rs
src/cli/commands/: create.rs
src/generators/: mod.rs  utils.rs  validator.rs
src/kplib/: mod.rs
src/kplib/generators/: mod.rs  password.rs  rules.rs
src/kplib/random/: mod.rs
src/krypto_pass/generators/: mod.rs  password.rs  rules.rs
src/modules/core/: mod.rs
src/modules/core/generators/: mod.rs  password.rs
tmp/: a.rs  main.rs
tmp/cli/: constants.rs  mod.rs
tmp/cli/commands/: generate.rs  mod.rs
tmp/krypto_pass/crypto/: mod.rs  random.rs
tmp/krypto_pass/generators/: passphrase.rs
